# starling

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  HANDOVER.md  README.md  init.sh  prerequisites.sh  pyproject.toml  start-vllm.sh  start.sh
apps/burn-server/: .env.example  Cargo.toml  README.md  init.sh  prerequisites.sh  start.sh
apps/burn-server/docs/: GPU_BACKENDS.md  pending-optimizations.md
apps/burn-server/patches/burn-candle-0.20.1/: Cargo.toml
apps/burn-server/patches/burn-candle-0.20.1/src/: tensor.rs
apps/burn-server/patches/burn-candle-0.20.1/src/ops/: base.rs
apps/burn-server/patches/cubecl-cuda-0.9.0/: Cargo.toml
apps/burn-server/patches/cubecl-wgpu-0.10.0-pre.3/: .cargo_vcs_info.json  Cargo.toml
apps/burn-server/patches/cubecl-wgpu-0.10.0-pre.3/src/: runtime.rs
apps/burn-server/patches/cubecl-wgpu-0.9.0/: .cargo_vcs_info.json
apps/burn-server/patches/cubecl-wgpu-0.9.0/src/: runtime.rs
apps/burn-server/src/: config.rs  lib.rs  main.rs
apps/burn-server/src/audio/: chunk.rs  ffmpeg.rs  inbound.rs  mel.rs  mod.rs  opus.rs  pad.rs  resample.rs
apps/burn-server/src/inference/: bf16_engine.rs  candle_engine.rs  config.rs  cuda_engine.rs  engine.rs  mod.rs  tokenizer.rs
apps/burn-server/src/inference/bf16/: loader.rs  mod.rs  model.rs  streaming.rs  weights.rs
apps/burn-server/src/inference/bf16/layers/: attention.rs  conv.rs  decoder_layer.rs  encoder_layer.rs  kv_cache.rs  masking.rs  rms_norm.rs  swiglu.rs  weights.rs
apps/burn-server/src/inference/candle_cpu/: engine.rs  mod.rs  model.rs
apps/burn-server/src/inference/candle_native/: engine.rs  mod.rs  model.rs
apps/burn-server/src/inference/candle_native_flash/: engine.rs  mod.rs  model.rs
apps/burn-server/src/inference/q4/: loader.rs  mod.rs  model.rs  reader.rs
apps/burn-server/src/inference/voxtral_tts/: autoregressor.rs  mod.rs  pipeline.rs  voice.rs  weights.rs
apps/burn-server/src/inference/voxtral_tts/ar_llm/: args.rs  embed.rs  forward.rs  mod.rs  model.rs
apps/burn-server/src/inference/voxtral_tts/codec/: args.rs  attention.rs  conv.rs  golden_tests.rs  mod.rs  model.rs  quantizer.rs  transformer.rs
apps/burn-server/src/inference/voxtral_tts/flow_matching/: args.rs  golden_tests.rs  mod.rs  model.rs
apps/burn-server/src/server/: mod.rs  routes.rs  state.rs  tts_routes.rs  ws.rs
apps/burn-server/src/transcription/: mod.rs  session.rs  streaming.rs
apps/burn-server/src/web/: mod.rs
apps/burn-server/test_data/tts_golden/: README.md  codec_deterministic_10_frames_bfloat16.npz  codec_deterministic_10_frames_bfloat16.safetensors  codec_deterministic_10_frames_float32.npz  codec_deterministic_10_frames_float32.safetensors  codec_random_25_frames_bfloat16.npz  codec_random_25_frames_bfloat16.safetensors  codec_random_25_frames_float32.npz  codec_random_25_frames_float32.safetensors  codec_single_frame_mid_bfloat16.npz  codec_single_frame_mid_bfloat16.safetensors  codec_single_frame_mid_float32.npz  codec_single_frame_mid_float32.safetensors  e2e_de_short_de_male.json  e2e_en_long_cheerful_female.json  e2e_en_medium_casual_male.json  e2e_en_short_neutral_female.json  e2e_en_short_neutral_male.json  e2e_fr_short_fr_female.json  fma_alternating_bfloat16.npz  fma_alternating_bfloat16.safetensors  fma_alternating_float32.npz  fma_alternating_float32.safetensors  fma_ones_small_bfloat16.npz  fma_ones_small_bfloat16.safetensors  fma_ones_small_float32.npz  fma_ones_small_float32.safetensors  fma_zeros_bfloat16.npz  fma_zeros_bfloat16.safetensors  fma_zeros_float32.npz  fma_zeros_float32.safetensors
apps/burn-server/tests/: e2e_session.rs  integration_api.rs  q4_matmul_accuracy.rs  speakers_api.rs
apps/burn-server/tests/helpers/: mod.rs
apps/vllm-server/: .env.example  README.md  init.sh  pyproject.toml  pytest.ini  start-vllm-tts.sh  start-vllm.sh  start.sh
apps/vllm-server/configs/: voxtral_tts.yaml
apps/vllm-server/docs/: tts_spike.md
apps/vllm-server/scripts/: check_tts_install.py  convert_npz_to_safetensors.py  convert_voice_embeddings_to_safetensors.py  dump_tts_codec.py  dump_tts_e2e_golden.py  dump_tts_flow_matching.py  spike_tts.py
apps/vllm-server/tests/: conftest.py  test_speakers_api.py  test_tts_api.py  test_tts_install.py  test_tts_lifecycle.py  test_tts_refs.py  test_tts_storage.py  test_tts_text.py  test_tts_wav.py
apps/vllm-server/voxtral_server/: config.py  main.py  models.py  state.py
apps/wasm-engine/: Cargo.toml
apps/wasm-engine/src/: lib.rs
apps/wasm-poc/: Cargo.toml  index.html
apps/wasm-poc/src/: lib.rs
frontend/: coturn_test.html  index.html  models
frontend/css/: styles.css
frontend/js/: config.js  main-sessions.js  main-webrtc.js  main.js
frontend/js/modules/: audio.js  file-upload.js  session-manager.js  subtitles.js  tts-manager.js  tts-player.js  utils.js  webrtc-uplink.js  webrtc.js  websocket.js
frontend/js/wasm/: audio-decode.js  loader.js  wasm-session.js  wasm-ui.js  worker.js
libs/ggml-matmul/: Cargo.toml  build.rs
libs/ggml-matmul/csrc/: ggml_matmul_wrapper.c
libs/ggml-matmul/src/: lib.rs
libs/voxtral-core/: Cargo.toml
libs/voxtral-core/src/: config.rs  inference.rs  lib.rs  tokenizer.rs  transcription.rs
libs/voxtral-core/src/audio/: mel.rs  mod.rs  pad.rs
libs/voxtral-core/src/layers/: attention.rs  conv.rs  encoder_layer.rs  mod.rs  rope.rs
libs/voxtral-core/src/q4/: engine.rs  incremental_engine.rs  linear.rs  loader.rs  mod.rs  model.rs  op.rs  tensor.rs
libs/voxtral-core/src/q4/shaders/: shader.wgsl
models/: README.md  download.sh
results/: burn_segments.txt  comparison.txt  vllm_segments.txt
scripts/: benchmark_comparison.py  benchmark_voxtral.py
tests/e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
tests/e2e/fixtures/: mockServer.ts
tests/e2e/specs/: speakers.spec.ts  tts.spec.ts
voxtral_server/: config.py  main.py
voxtral_server/api/: config_routes.py  media_routes.py  model_routes.py
voxtral_server/audio/: webrtc_track.py
voxtral_server/transcription/: session_runner.py
voxtral_server/ws/: handler.py
(+16 files in other folders)
