[package]
name = "burn-server"
version = "0.1.0"
edition = "2021"
description = "Real-time Voxtral ASR server using Burn ML framework with Q4/BF16 inference and WASM browser mode"
license = "MIT"

[[bin]]
name = "burn-server"
path = "src/main.rs"

[dependencies]
# ML framework
burn = { version = "0.20", features = ["wgpu", "default"] }
cubecl = { version = "0.9", features = ["wgpu"] }

# HTTP server
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }

# Audio processing
hound = "3.5"
rubato = "1.0"
rustfft = "6.4"

# Model loading
safetensors = "0.7"
half = "2.7"
memmap2 = "0.9"
tokenizers = "0.22"

# WebRTC
webrtc = "0.11"
audiopus = "0.3.0-rc.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"
bytes = "1.5"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
libc = "0.2"

[features]
default = ["native"]
native = []
wasm = []

[profile.release]
opt-level = 3
lto = "thin"
