[package]
name = "burn-server"
version = "0.1.0"
edition = "2021"
description = "Real-time Voxtral ASR server using Burn ML framework with Q4/BF16 inference and WASM browser mode"
license = "MIT"

[lib]
name = "burn_server"
path = "src/lib.rs"

[[bin]]
name = "burn-server"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
# ML framework
burn = { version = "0.20", features = ["wgpu", "default", "template"] }
cubecl = { version = "0.9", features = ["wgpu"], default-features = false }

# HTTP server
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { version = "1", features = ["full"] }

# Audio processing
hound = "3.5"
rubato = "0.15"
rustfft = "6.4"
num-complex = "0.4"

# Model loading
safetensors = "0.7"
half = { version = "2.7", features = ["num-traits"] }
byteorder = "1.5"
anyhow = "1.0"
tracing = "0.1"
memmap2 = "0.9"

# Pure candle (native CUDA, no burn abstraction)
# Use 0.9.x to match burn-candle's candle-core version (avoids numerical drift)
candle-core-native = { version = "0.9", package = "candle-core", features = ["cuda"], optional = true }
candle-nn-native = { version = "0.9", package = "candle-nn", features = ["cuda"], optional = true }
# candle 0.9 CPU-only (no CUDA dependency, uses quantized module for Q4 GGUF)
candle-core-cpu = { version = "0.9", package = "candle-core", default-features = false, optional = true }
candle-nn-cpu = { version = "0.9", package = "candle-nn", default-features = false, optional = true }
# candle 0.10 + flash-attn (for future optimization once 0.9 correctness is proven)
candle-core = { version = "0.10", package = "candle-core", features = ["cuda"], optional = true }
candle-nn = { version = "0.10", package = "candle-nn", features = ["cuda"], optional = true }
candle-flash-attn = { version = "0.10", optional = true }

# ggml AVX-512 quantized matmul (CPU-only, no CUDA dependency)
ggml-matmul = { path = "../../libs/ggml-matmul", optional = true }

# WebRTC
webrtc = "0.11"
audiopus = "0.3.0-rc.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.6", features = ["v4"] }
futures-util = "0.3"
bytes = "1.5"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = ["native"]
native = []
wasm = []
cuda = ["burn/cuda"]
candle = ["burn/candle-cuda"]
candle-native = ["dep:candle-core-native", "dep:candle-nn-native"]
candle-native-flash = ["dep:candle-core", "dep:candle-nn", "dep:candle-flash-attn"]
candle-cpu = ["dep:candle-core-cpu", "dep:candle-nn-cpu"]
candle-cpu-ggml = ["candle-cpu", "dep:ggml-matmul"]

# [patch.crates-io] moved to workspace root Cargo.toml

[profile.release]
opt-level = 3
lto = "thin"
