[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"
description = "Voxtral WASM inference engine — Q4 model running in the browser via WebGPU"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared inference core (WASM mode — no std::fs)
voxtral-core = { path = "../../libs/voxtral-core", default-features = false, features = ["wasm"] }

# ML framework (wgpu → WebGPU in browser)
burn = { version = "0.20", default-features = false, features = ["wgpu"] }

# WASM interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Panic hook for readable stack traces
console_error_panic_hook = "0.1"

# getrandom for WASM
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "s"
lto = true
