[package]
name = "wasm-poc"
version = "0.1.0"
edition = "2021"
description = "Phase 0: Prove Burn/wgpu compiles to WASM and async GPU readback works"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Burn with wgpu only — minimal feature set for WASM
burn = { version = "0.20", default-features = false, features = ["wgpu"] }
cubecl = { version = "0.9", default-features = false, features = ["wgpu"] }

# WASM interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Panic hook for readable stack traces in browser
console_error_panic_hook = "0.1"

# getrandom for WASM (wgpu needs it)
getrandom = { version = "0.3", features = ["wasm_js"] }

# [patch.crates-io] moved to workspace root Cargo.toml

[profile.release]
opt-level = "s"
lto = true
