[package]
name = "voxtral-core"
version = "0.1.0"
edition = "2021"
description = "Voxtral-Mini-4B-Realtime inference core — shared between native server and WASM browser"
license = "MIT"

[dependencies]
# ML framework (wgpu backend for Q4 kernels + shared layers)
burn = { version = "0.20", default-features = false, features = ["wgpu", "template"] }
cubecl = { version = "0.9", default-features = false, features = ["wgpu"] }

# Audio DSP
rustfft = "6.4"
num-complex = "0.4"

# Model loading / numerics
half = { version = "2.7", features = ["num-traits"] }
byteorder = "1.5"
anyhow = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# WAV loading (native only)
hound = { version = "3.5", optional = true }

# WASM getrandom support
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }

[features]
default = ["native"]
native = ["dep:hound"]
wasm = ["dep:getrandom"]
